--- a/TeamH/app/views/index.html
+++ b/TeamH/app/views/index.html
@@ -1,44 +1,60 @@
+{% extends "layout_unbranded.html" %}
+{% block pageTitle %} Login {% endblock %}
+{%block content%}
 
-{% extends "layout.html" %}
+  <h2>Login</h2>
+  {% from "govuk/components/select/macro.njk" import govukSelect %}
 
-{% block pageTitle %}
-  GOV.UK Prototype Kit
-{% endblock %}
+  <form class="form" action="javascript:login()" method="GET">
+    {{ govukSelect({
+  id: "user",
+  name: "user",
+  label: {
+    text: "User"
+  },
+  items: [
+    {
+      value: "hr",
+      text: "HR Team"
+    },
+    {
+      value: "finance",
+      text: "Finance Team"
+    },
+    {
+      value: "sales",
+      text: "Sales Manager"
+    },
+    {
+      value: "talent",
+      text: "Talent Manager"
+    }
+  ]
+}) }}
 
-{% block content %}
+    {% from "govuk/components/button/macro.njk" import govukButton %}
 
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-xl">
-        The GOV.UK Prototype Kit
-        <span class="govuk-caption-xl">{{releaseVersion}}</span>
-      </h1>{{releaseVersion | log }}
-      <p>
-        This kit lets you rapidly create HTML prototypes of GOV.UK services.
-      </p>
+    {{ govukButton({
+  text: "Login"
+}) }}
+  </form>
 
-      <p>
-        It contains all you need to prototype anything from simple static pages to complex, data-driven transactions.
-      </p>
+  <script>
+    function login() {
+      let user = document
+        .getElementById("user")
+        .value;
 
-      <h2 class="govuk-heading-m">About this page</h2>
-
-      <p>We recommend you add links to your prototype to this page, rather than delete it.
-        You'll find this page in the kit at '/app/views/index.html'.</p>
-
-      <p>You can change the service name by editing the file '/app/config.js'.</p>
-
-      <h2 class="govuk-heading-m">Examples and documentation</h2>
-
-      <ul class="govuk-list govuk-list--bullet">
-        <li>
-          <a href="/docs/tutorials-and-examples">Example pages and documentation</a>
-        </li>
-        <li>
-          <a href="https://design-system.service.gov.uk">GOV.UK Design System</a>
-        </li>
-      </ul>
-    </div>
-  </div>
+      if (user.valueOf() == "hr") {
+        window.location.href = "/hrmenu.html";
+      } else if (user.valueOf() == "finance") {
+        window.location.href = "/financemenu.html";
+      } else if (user.valueOf() == "sales") {
+        window.location.href = "/salesmenu.html";
+      } else if (user.valueOf() == "talent") {
+        window.location.href = "/talentmenu.html";
+      }
+    };
+  </script>
 
 {% endblock %}
