--- a/TeamH/app/views/empdepartment.html
+++ b/TeamH/app/views/empdepartment.html
@@ -8,10 +8,10 @@ salesemp.ID}, {text: salesemp.Name }, {text: salesemp.Address}, {text:
 salesemp.NIN}, {text:salesemp.BAN}, {text:salesemp.Sortcode}, {text:
 salesemp.Salary}, {text: salesemp.CommissionRate}, {text:
 salesemp.TotalSalesValues} ]), salesemprows) %} {% endfor %} {{govukTable({
-head: [ { text: 'ID'}, {text: 'Name'}, {text: 'Address'}, {text: 'NIN'}, {text:
-'BAN'}, {text: 'Sortcode'}, {text: 'Salary'}, {text: 'Comission Rate'}, {text:
-'Total Sales Value'}], rows: salesemprows }) }} {% else %} There are no
-employees. {% endif %}
+head: [ { text: 'ID'}, {text: 'Name'}, {text: 'Address'}, {text: 'National
+Insurance Number'}, {text: 'Bank Account Number'}, {text: 'Sortcode'}, {text:
+'Salary'}, {text: 'Comission Rate'}, {text: 'Total Sales Value'}], rows:
+salesemprows }) }} {% else %} There are no employees. {% endif %}
 
 <h2>List of Technical Employees</h2>
 {% if techemps and techemps.length > 0 %} {% set techemprows = [] %} {% for
@@ -20,6 +20,6 @@ techemp.ID}, {text: techemp.Name }, {text: techemp.Address}, {text:
 techemp.NIN}, {text:techemp.BAN}, {text:techemp.Sortcode}, {text:
 techemp.Salary}, {text: techemp.cv}, {text: techemp.photo} ]), salesemprows) %}
 {% endfor %} {{govukTable({ head: [ { text: 'ID'}, {text: 'Name'}, {text:
-'Address'}, {text: 'NIN'}, {text: 'BAN'}, {text: 'Sortcode'}, {text: 'Salary'},
-{text: 'CV'}, {text: 'Photo'}], rows: techemprows }) }} {% else %} There are no
-employees. {% endif %} {% endblock %}
+'Address'}, {text: 'National Insurance Number'}, {text: 'Bank Account Number'},
+{text: 'Sortcode'}, {text: 'Salary'}, {text: 'CV'}, {text: 'Photo'}], rows:
+techemprows }) }} {% else %} There are no employees. {% endif %} {% endblock %}
