--- a/TeamH/app/views/highestsales.html
+++ b/TeamH/app/views/highestsales.html
@@ -19,4 +19,11 @@
         {{govukTable({ head: [ { text: 'Name'}, {text: 'TotalSales'} ], rows:
 emprows }) }}
     {% else %} There are no employees. {% endif %}
+
+
+<form class="form" action="/salesmenu.html" method="GET">
+    {{ govukButton({
+  text: "Home"
+}) }}
+</form>
 {% endblock %}
