--- a/TeamH/app/views/newemp.html
+++ b/TeamH/app/views/newemp.html
@@ -25,5 +25,9 @@
 		Accept and send
 	</button>
 </form>
-
+<form class="form" action="/hrmenu.html" method="GET">
+    {{ govukButton({
+  text: "Home"
+}) }}
+</form>
 {% endblock %}
