--- a/TeamH/app/views/newsalesemp.html
+++ b/TeamH/app/views/newsalesemp.html
@@ -42,4 +42,9 @@ emprows }) }}
 	</button>
 	</form>
 
+<form class="form" action="/hrmenu.html" method="GET">
+    {{ govukButton({
+  text: "Home"
+}) }}
+</form>
 {% endblock %}
